--- a/index.html
+++ b/index.html
@@ -9,17 +9,16 @@
 <body>
     <header>
         <!-- Comienza el Header -->
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-        <i class="bi bi-fingerprint img-huella"></i>
+        <img src="img/logo.jpg" class="img-logo" alt="">
         <nav>
-            <a href="">Home</a>
-            <a href="">About</a>
-            <a href="">Portfolio</a>
-            <a href="">Service</a>
-            <a href="">Blog</a>
-            <a href="">Contact</a>
+            <a href="#" class="nav-link">Home</a>
+            <a href="#" class="nav-link">About</a>
+            <a href="#" class="nav-link">Portfolio</a>
+            <a href="#" class="nav-link">Service</a>
+            <a href="#" class="nav-link">Blog</a>
+            <a href="#" class="nav-link">Contact</a>
         </nav>
-        <button>Download CV</button>
+        <a href="#" class="descargar">Download CV</a>
         <!-- Fin del Header -->
     </header>
 
