Agregue el logo en formato png

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <!-- Comienza el Header -->
-        <img src="img/logo.jpg" class="img-logo" alt="">
+        <img src="img/logo.png" class="img-logo" alt="">
         <nav>
             <a href="#" class="nav-link">Home</a>
             <a href="#" class="nav-link">About</a>
