Agrege los links de las redes sociales

--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
                 </section>
                 
                 <section class="logos">
-                    <a href=""><i class="bi bi-facebook face"></i></a>
-                    <a href=""><i class="bi bi-twitter tw"></i></a>
-                    <a href=""><i class="bi bi-instagram ig"></i></a>
-                    <a href=""><i class="bi bi-linkedin li"></i></a>
+                    <a href="#"><i class="bi bi-facebook face"></i></a>
+                    <a href="https://x.com/Nano_sotomayor" target="_blank"><i class="bi bi-twitter tw"></i></a>
+                    <a href="https://www.instagram.com/nano_sotomayor/" target="_blank"><i class="bi bi-instagram ig"></i></a>
+                    <a href="https://www.linkedin.com/in/nano-sotomayor-7239b7280/" target="_blank"><i class="bi bi-linkedin li"></i></a>
                 </section>
             </section>
             
