Estructura general del cuadro que sigue al Hero

--- a/index.html
+++ b/index.html
@@ -55,7 +55,27 @@
         </section>
 
 
-        <section></section>
+            <!-- Cuadrito que sigue del Hero -->
+        <section class="cuadro">
+            <section>
+                <i class="bi bi-bullseye perfect"></i>
+                <h2>Pixel Perfect</h2>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cum non pariatur, quisquam quam velit nobis dolores fuga modi praesentium est quos minus ea, quae aliquid in temporibus iste, omnis excepturi!</p>
+            </section>
+            <section>
+                <i class="bi bi-lightbulb quality"></i>
+                <h2>High Quality</h2>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cum non pariatur, quisquam quam velit nobis dolores fuga modi praesentium est quos minus ea, quae aliquid in temporibus iste, omnis excepturi!</p>
+            </section>
+            <section>
+                <i class="bi bi-lightbulb lampara"></i>
+                <h2>Awesome Idea</h2>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cum non pariatur, quisquam quam velit nobis dolores fuga modi praesentium est quos minus ea, quae aliquid in temporibus iste, omnis excepturi!</p>
+            </section>
+        </section>
+
+
+
         <section></section>
         <section></section>
         <section></section>
