Hice la estructura del Abaout

--- a/index.html
+++ b/index.html
@@ -57,26 +57,38 @@
 
             <!-- Cuadrito que sigue del Hero -->
         <section class="cuadro">
-            <section>
+            <section class="prim">
                 <i class="bi bi-bullseye perfect"></i>
                 <h2>Pixel Perfect</h2>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cum non pariatur, quisquam quam velit nobis dolores fuga modi praesentium est quos minus ea, quae aliquid in temporibus iste, omnis excepturi!</p>
             </section>
-            <section>
+            <section class="seg">
                 <i class="bi bi-lightbulb quality"></i>
                 <h2>High Quality</h2>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cum non pariatur, quisquam quam velit nobis dolores fuga modi praesentium est quos minus ea, quae aliquid in temporibus iste, omnis excepturi!</p>
             </section>
-            <section>
+            <section class="terc">
                 <i class="bi bi-lightbulb lampara"></i>
                 <h2>Awesome Idea</h2>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cum non pariatur, quisquam quam velit nobis dolores fuga modi praesentium est quos minus ea, quae aliquid in temporibus iste, omnis excepturi!</p>
             </section>
+            <!-- Cuadrito que sigue del Hero -->
         </section>
 
 
 
-        <section></section>
+        <!-- Comienza el Abaout Me -->
+        <section class="abaout">
+            <section>
+                <img src="img/img-trabajando.jpg" class="imagen" alt="">
+            </section>
+            <section>
+                <h2>About Me</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium eos et, tempore, nostrum quisquam molestiae cumque maxime reprehenderit totam magnam expedita amet ab deleniti itaque optio iste eveniet ex possimus.</p>
+
+            </section>
+        </section>
+        <!-- Finaliza el Abaout Me -->
         <section></section>
         <section></section>
         <section></section>
