Agregue las imagenes de las barras de progreso al About Me

--- a/index.html
+++ b/index.html
@@ -85,6 +85,15 @@
             <section>
                 <h2>About Me</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium eos et, tempore, nostrum quisquam molestiae cumque maxime reprehenderit totam magnam expedita amet ab deleniti itaque optio iste eveniet ex possimus.</p>
+                <h4>UX</h4>
+                    <img src="img/barrita2.png" class="ux" alt="HJSHDJSHDJHSKJD">
+                <h4>Website Desing</h4>
+                    <img src="img/barrita1.png" class="web" alt="">
+                <h4>App Desing</h4>
+                    <img src="img/barrita3.png" class="app" alt="">
+                <h4>Graphic Desing</h4>
+                    <img src="img/barrita4.png" class="graphic" alt="">
+                
 
             </section>
         </section>
