--- a/index.html
+++ b/index.html
@@ -78,27 +78,30 @@
 
 
         <!-- Comienza el Abaout Me -->
-        <section class="abaout">
+        <section class="about">
             <section>
                 <img src="img/img-trabajando.jpg" class="imagen" alt="">
             </section>
             <section>
-                <h2>About Me</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium eos et, tempore, nostrum quisquam molestiae cumque maxime reprehenderit totam magnam expedita amet ab deleniti itaque optio iste eveniet ex possimus.</p>
-                <h4>UX</h4>
-                    <img src="img/barrita2.png" class="ux" alt="HJSHDJSHDJHSKJD">
-                <h4>Website Desing</h4>
-                    <img src="img/barrita1.png" class="web" alt="">
-                <h4>App Desing</h4>
-                    <img src="img/barrita3.png" class="app" alt="">
-                <h4>Graphic Desing</h4>
-                    <img src="img/barrita4.png" class="graphic" alt="">
-                
-
+                <h2 class="about-me">About Me</h2>
+                <p class="text-about">Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium eos et, tempore, nostrum quisquam molestiae cumque maxime reprehenderit totam magnam expedita amet ab deleniti itaque optio iste eveniet ex possimus.</p>
+                <h4 class="ux">UX</h4>
+                    <img src="img/barrita2.png" alt="">
+                <h4 class="web">Website Desing</h4>
+                    <img src="img/barrita1.png" alt="">
+                <h4 class="app">App Desing</h4>
+                    <img src="img/barrita3.png" alt="">
+                <h4 class="graphic">Graphic Desing</h4>
+                    <img src="img/barrita4.png" alt="">
             </section>
         </section>
         <!-- Finaliza el Abaout Me -->
+
+
+
+        <!-- Comienza "Mi experiencia" -->
         <section></section>
+        <!-- Finaliza "Mi experiencia" -->
         <section></section>
         <section></section>
         <section></section>
