Empece parte de la Experiencia y le agregue las transiciones a los botones para que quede mas bonito

--- a/index.html
+++ b/index.html
@@ -100,7 +100,22 @@
 
 
         <!-- Comienza "Mi experiencia" -->
-        <section></section>
+        <section class="experience">
+            <h1>My Work Ecperience</h1>
+            <section>
+                <p>Primera <br></p>
+                <p>Experiencia</p>
+            </section>
+            <section>
+                <img src="img/img-experiencia.png" alt="">
+            </section>
+            <section>
+
+            </section>
+            
+            
+
+        </section>
         <!-- Finaliza "Mi experiencia" -->
         <section></section>
         <section></section>
